logs/Slang/chapter-12/12.7.3--foreach.sv.log
name: foreach_loop
description: A module testing foreach loop
should_fail: 0
tags: 12.7.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-12/12.7.3--foreach.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-12/12.7.3--foreach.sv:8:20: error: language feature not yet supported
	string test [4] = '{"111", "222", "333", "444"};
	                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-12/12.7.3--foreach.sv:10:3: error: language feature not yet supported
		foreach(test[i])
		^~~~~~~~~~~~~~~~
